# telegram-autojoin-bot

./: AUTOJOIN_SETUP.md  README.txt  auth_system.py  authorized_users.json  bot_handlers.py  bot_handlers_backup.py  chat_storage.py  config.py  deploy_setup.py  hybrid_autojoin.py  main.py  pyproject.toml  railway.json  railway_deploy.md  render.yaml  replit.md  requirements.txt  setup_autojoin.py  start.bat  start.sh  user_autojoin.py  utils.py  verify_user_account.py
